--- a/front/src/app/features/column/components/create-column-button/create-column-button.scss
+++ b/front/src/app/features/column/components/create-column-button/create-column-button.scss
@@ -1,6 +1,7 @@
 :host{
  height: 40px;
  width: 300px;
+ flex: 0 0 300px;
 }
 
 .main{
